--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -3,7 +3,7 @@
 }
 
 .main-title {
-    @apply text-5xl font-serif font-bold text-primary mb-6;
+    @apply text-3xl sm:text-4xl md:text-5xl font-serif font-bold text-primary mb-6;
 }
 
 .title-underline {
